logs/mafan.log
Listing '.'...
Listing './bin'...
Compiling './bin/chardetect.py'...
***   File "./bin/chardetect.py", line 36
    print description_of(stdin)
                       ^
SyntaxError: invalid syntax

Compiling './bin/convert.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.1.egg-info'...
Listing './lib/python3.5/site-packages/chardet'...
Compiling './lib/python3.5/site-packages/chardet/chardistribution.py'...
***   File "./lib/python3.5/site-packages/chardet/chardistribution.py", line 48
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/charsetgroupprober.py'...
***   File "./lib/python3.5/site-packages/chardet/charsetgroupprober.py", line 44
    prober.active = constants.True
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/constants.py'...
***   File "./lib/python3.5/site-packages/chardet/constants.py", line 46
    False = __builtin__.False
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/escprober.py'...
***   File "./lib/python3.5/site-packages/chardet/escprober.py", line 48
    codingSM.active = constants.True
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/jpcntx.py'...
***   File "./lib/python3.5/site-packages/chardet/jpcntx.py", line 132
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langbulgarianmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langbulgarianmodel.py", line 218
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langcyrillicmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langcyrillicmodel.py", line 287
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langgreekmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langgreekmodel.py", line 215
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langhebrewmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langhebrewmodel.py", line 199
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langhungarianmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langhungarianmodel.py", line 215
    'keepEnglishLetter': constants.True,
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langthaimodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langthaimodel.py", line 198
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/sbcharsetprober.py'...
***   File "./lib/python3.5/site-packages/chardet/sbcharsetprober.py", line 42
    def __init__(self, model, reversed=constants.False, nameProber=None):
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/sbcsgroupprober.py'...
***   File "./lib/python3.5/site-packages/chardet/sbcsgroupprober.py", line 59
    logicalHebrewProber = SingleByteCharSetProber(Win1255HebrewModel, constants.False, hebrewProber)
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/universaldetector.py'...
***   File "./lib/python3.5/site-packages/chardet/universaldetector.py", line 54
    self.done = constants.False
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chardet-2.1.1.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/jieba'...
Listing './lib/python3.5/site-packages/jieba/analyse'...
Listing './lib/python3.5/site-packages/jieba/finalseg'...
Listing './lib/python3.5/site-packages/jieba/posseg'...
Listing './lib/python3.5/site-packages/jieba-0.37.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/mafan'...
Listing './lib/python3.5/site-packages/mafan/hanzidentifier'...
Listing './lib/python3.5/site-packages/mafan/third_party'...
Listing './lib/python3.5/site-packages/mafan/third_party/jianfan'...
Listing './lib/python3.5/site-packages/mafan-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
